--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
+      http-equiv="X-UA-Compatible" content="IE=edge"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
